configuration added, small update for calendar

--- a/webapp/template/calendar.html
+++ b/webapp/template/calendar.html
@@ -2,8 +2,9 @@
 
 {% block content %}
 <center>
+
 	<br><br><br>
-	Current time is {{ time }}
+	Day {{ day}}, {{ time }}
 	<br><br><br>
 	{{ cal|safe }}
 	<br><br><br>
