--- a/webapp/template/navbar.html
+++ b/webapp/template/navbar.html
@@ -26,7 +26,7 @@
 					</a>
 					<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 						<li><a class="dropdown-item" href="{% url 'pages:events' %}">All events</a></li>
-						<li><a class="dropdown-item" href="{% url 'pages:events' %}">Add event</a></li>
+						<li><a class="dropdown-item" href="{% url 'pages:add_event' %}">Add event</a></li>
 					</ul>
 				</li>
 				<li class="nav-item">
