--- a/webapp/template/events.html
+++ b/webapp/template/events.html
@@ -19,12 +19,11 @@
 			<td>{{ event.drinks }}</td>
 			<td>{{ event.date }}</td>
 			<td>{{ event.duration }} hour(s)</td>
-			<td align="center"><a href="{% url 'pages:update_event' event.id %}">Update</a></td>
+			<td align="center"><a href="{% url 'pages:update_event' event.id %}"
+				class="btn btn-outline-secondary btn-sm">Update</a></td>
 		</tr>
 		{% endfor %}
 	</table>
 	<div class="white_cube"> .</div>
-	<p><a class="link_event" href="../admin/pages/event/add/">Add an event here</a></p>
-	<p><a class="link_event" href="../user/">Add a user there</a></p>
 </div>
 {% endblock %}
