--- a/webapp/template/update_event.html
+++ b/webapp/template/update_event.html
@@ -3,9 +3,14 @@
 
 {% block content %}
 	<center>
-	<br><br><br>
-	<h1>Update event...</h1>
+	<br/><br/><br/>
+	<h1>Update {{ event.name }}</h1>
 	<br/>
-	{{ event.name }}
+	<form action="" method=POST>
+		<br/>
+		{% csrf_token %}
+		{{ form.as_p}}
+		<input type="submit" value="Update" class="btn btn-success">
+	</form>
 	</center>
 {% endblock %}
