added students, add_student and update_student pages; added student form

--- a/webapp/template/home.html
+++ b/webapp/template/home.html
@@ -2,12 +2,14 @@
 {% load static %}
 
 {% block content %}
-<div id="home_event">
-	<a id="events" href="events/">EVENTS</a>	
-</div>
-<div id="home_user">
-	<a :link id="user" href="user/">USER INFOS</a>	
-</div>
+<center>
+	<div id="home_event">
+		<a id="events" href="events/">EVENTS</a>	
+	</div>
+	<div id="home_user">
+		<a :link id="user" href="students/">STUDENT INFOS</a>	
+	</div>
+</center>
 <!-- <h2><a :link href="drinks/">DRINKS</a></h2>
 	{% include 'scan.html' %} -->
 {% endblock %}
