--- a/webapp/template/navbar.html
+++ b/webapp/template/navbar.html
@@ -14,8 +14,8 @@
 				  Users
 				</a>
 				<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-					<li><a class="dropdown-item" href="{% url 'pages:user' %}">All users</a></li>
-					<li><a class="dropdown-item" href="{% url 'pages:user' %}">Add user</a></li>
+					<li><a class="dropdown-item" href="{% url 'badges:students' %}">All users</a></li>
+					<li><a class="dropdown-item" href="{% url 'badges:add_student' %}">Add user</a></li>
 					<!-- <li><hr class="dropdown-divider"></li>
 						<li><a class="dropdown-item" href="#">Something else here</a></li> -->
 					</ul>
