--- a/webapp/template/events.html
+++ b/webapp/template/events.html
@@ -1,29 +1,30 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div id="event_page">
-	<h1 id="title">EVENTS</h1>
-	<h2 id="info">Scan here to add a new participant</h2>
-	<table id="table">
-		<tr class="first_part">
-			<th>Name</th>
-			<th>Drinks</th>
-			<th>Date</th>
-			<th>Duration</th>
-			<th></th>
-		</tr>
-		{% for event in events %}
-		<tr>
-			<td><a class="link_event" href="{%url 'pages:one_event' event.id %}">
-				{{ event.name }}</a></td>
-			<td>{{ event.drinks }}</td>
-			<td>{{ event.date }}</td>
-			<td>{{ event.duration }} hour(s)</td>
-			<td align="center"><a href="{% url 'pages:update_event' event.id %}"
-				class="btn btn-outline-secondary btn-sm">Update</a></td>
-		</tr>
-		{% endfor %}
-	</table>
-	<div class="white_cube"> .</div>
-</div>
+<center>
+	<div id="event_page">
+		<h1 id="title">EVENTS</h1>
+		<table id="table">
+			<tr class="first_part">
+				<th>Name</th>
+				<th>Drinks</th>
+				<th>Date</th>
+				<th>Duration</th>
+				<th></th>
+			</tr>
+			{% for event in events %}
+			<tr>
+				<td><a class="link_event" href="{%url 'pages:one_event' event.id %}">
+					{{ event.name }}</a></td>
+					<td>{{ event.drinks }}</td>
+					<td>{{ event.date }}</td>
+					<td>{{ event.duration }} hour(s)</td>
+					<td align="center"><a href="{% url 'pages:update_event' event.id %}"
+						class="btn btn-outline-secondary btn-sm">Update</a></td>
+					</tr>
+					{% endfor %}
+				</table>
+				<div class="white_cube"> .</div>
+			</div>
+</center>
 {% endblock %}
