working on students import

--- a/webapp/template/events.html
+++ b/webapp/template/events.html
@@ -17,7 +17,7 @@
 				{{ event.name }}</a></td>
 			<td>{{ event.drinks }}</td>
 			<td>{{ event.date }}</td>
-			<td>{{ event.duration }} hour(s)</td>
+			<td>{{ event.end }} hour(s)</td>
 		</tr>
 		{% endfor %}
 	</table>
