added login and logout funcitons

--- a/webapp/template/navbar.html
+++ b/webapp/template/navbar.html
@@ -6,11 +6,17 @@
 	  </button>
 	  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 		<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-		  <li class="nav-item">
-			<a class="nav-link" href="{% url 'admin:index' %}">Admin</a>
-		  </li>
-		  <li class="nav-item dropdown">
-			  <a class="nav-link dropdown-toggle" href="{% url 'pages:events' %}" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+		{% if user.is_authenticated %}
+			<li class="nav-item">
+				<a class="nav-link" href="{% url 'accounts:logout' %}">Logout</a>
+		 	 </li>
+		{% else %}
+			<li class="nav-item">
+				<a class="nav-link" href="{% url 'accounts:login' %}">Login</a>
+		  	</li>
+		{% endif %}
+			<li class="nav-item dropdown">
+				<a class="nav-link dropdown-toggle" href="{% url 'pages:events' %}" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
 				  Users
 				</a>
 				<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -18,17 +24,17 @@
 					<li><a class="dropdown-item" href="{% url 'badges:add_student' %}">Add user</a></li>
 					<!-- <li><hr class="dropdown-divider"></li>
 						<li><a class="dropdown-item" href="#">Something else here</a></li> -->
-					</ul>
-				</li>
-				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" href="{% url 'pages:events' %}" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+				</ul>
+			</li>
+			<li class="nav-item dropdown">
+				<a class="nav-link dropdown-toggle" href="{% url 'pages:events' %}" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
 						Events
-					</a>
-					<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-						<li><a class="dropdown-item" href="{% url 'pages:events' %}">All events</a></li>
-						<li><a class="dropdown-item" href="{% url 'pages:add_event' %}">Add event</a></li>
-					</ul>
-				</li>
+				</a>
+				<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+					<li><a class="dropdown-item" href="{% url 'pages:events' %}">All events</a></li>
+					<li><a class="dropdown-item" href="{% url 'pages:add_event' %}">Add event</a></li>
+				</ul>
+			</li>
 				<li class="nav-item">
 				  <a class="nav-link" href="{% url 'pages:calendar' %}">Calendar</a>
 				</li>
