--- a/webapp/template/one_event.html
+++ b/webapp/template/one_event.html
@@ -7,18 +7,30 @@
 		<tr>
 			<th>Login</th>
 			<th>Date</th>
-			<th>Drinks</th>
+				<th>{{ event.mode.type }}</th>
 			<th></th>
 		</tr>
 		{% for scan in scans %}
 		<tr>
 			<td>{{ scan.uid }}</td>
 			<td>{{ scan.date }}</td>
-			<td>{{ event.drinks }}</td>
+				<td>{{ event.mode.amount }}</td>
 			<td align="center"><a href="{% url 'pages:update_event' event.pk %}"
 				class="btn btn-outline-secondary btn-sm">Update</a></td>
 		</tr>
 		{% endfor %}
+	</table>
+	<table class="scan_table">
+		<tr>
+			<th>Mode</th>
+			<th>Amount</th>
+		</tr>
+		{% for mode in event.mode.all %}
+		<tr>
+				<td>{{ mode.type }}</td>
+				<td>{{ mode.amount }}</td>
+			</tr>
+			{% endfor %}
 	</table>
 	<div class="blue_cube"> .</div>
 </div>
