--- a/webapp/template/navbar.html
+++ b/webapp/template/navbar.html
@@ -15,6 +15,9 @@
 				<a class="nav-link" href="{% url 'accounts:login' %}">Login</a>
 		  	</li>
 		{% endif %}
+			<li class="nav-item">
+				<a class="nav-link" href="{% url 'admin:index' %}">Admin</a>
+		 	 </li>
 			<li class="nav-item dropdown">
 				<a class="nav-link dropdown-toggle" href="{% url 'pages:events' %}" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
 				  Users
