working on api, scan pages. Fixed login

--- a/webapp/template/scans.html
+++ b/webapp/template/scans.html
@@ -1,3 +1,9 @@
+{% extends 'base.html' %}
+{% load static %}
+
+{% block content %}
+
+
 <table class="scan_table" style="border:solid; ">
 	<tr>
 		<th>UID</th>
@@ -10,3 +16,5 @@
 	</tr>
 	{% endfor %}
 </table>
+
+{% endblock %}
