--- a/webapp/template/students.html
+++ b/webapp/template/students.html
@@ -38,7 +38,7 @@
 	<tr>
 		<td><img src="{{ student.image_url }}"> </td>
 		<td>{{ student.intra_id }}</td>
-		<td>{{ student.login }}</td>
+		<td><a href="https://profile.intra.42.fr/users/{{ student.login }}"><u>{{ student.login }}</u></a></td>
 		<td>{{ student.displayname }}</td>
 		<td>{{ student.email }}</td>
 		<td>{{ student.is_staff }}</td>
