--- a/webapp/template/search_general.html
+++ b/webapp/template/search_general.html
@@ -8,12 +8,12 @@
 		<h1>You searched for {{ searched }}</h1>
 		<br/>
 		{% for event in events %}
-			<a href="{% url 'pages:one_event' event.pk%}">{{ event.name }} - {{ event.date }} </a><br/>
+			<a href="{% url 'pages:one_event' event.pk%}"><u>{{ event.name }}</u> - {{ event.date }} </a><br/>
 
 		{% endfor %}
 
 		{% for student in students %}
-			<a href="{% url 'badges:one_student' student.pk%}">{{ student.intra_id }}</a> - <a href="https://profile.intra.42.fr/users/{{ student.login }}">{{ student.login }}</a> - {{ student.displayname }}<br/>
+			<a href="{% url 'badges:one_student' student.pk%}"><u>{{ student.intra_id }}</u></a> - <a href="https://profile.intra.42.fr/users/{{ student.login }}"><u>{{ student.login }}</u></a> - {{ student.displayname }}<br/>
 
 		{% endfor %}
 		
