--- a/webapp/template/update_event.html
+++ b/webapp/template/update_event.html
@@ -9,8 +9,7 @@
 	<form action="" method=POST>
 		<br/>
 		{% csrf_token %}
-		{{ event_form.as_p}}
-		{{ mode_form.as_p}}
+		{{ form.as_p}}
 		<input type="submit" value="Update" class="btn btn-success">
 	</form>
 	</center>
