--- a/webapp/template/one_event.html
+++ b/webapp/template/one_event.html
@@ -23,12 +23,12 @@
 			<th>Mode</th>
 			<th>Amount</th>
 		</tr>
-		{% for mode in event.mode.all %}
+		{% for mode in modes %}
 		<tr>
-				<td>{{ mode.type }}</td>
-				<td>{{ mode.amount }}</td>
-			</tr>
-			{% endfor %}
+			<td>{{ mode.type }}</td>
+			<td>{{ mode.amount }}</td>
+		</tr>
+		{% endfor %}
 	</table>
 	<div class="blue_cube"> .</div>
 </div>
