--- a/webapp/template/update_mode.html
+++ b/webapp/template/update_mode.html
@@ -4,7 +4,7 @@
 {% block content %}
 	<center>
 	<br/><br/><br/>
-	<h1>Update {{ event.name }} and its mode</h1>
+	<h1>Update {{ event.name }} and its mode.s</h1>
 	<br/>
 	<form action="" method=POST>
 		<br/>
