--- a/webapp/template/one_event.html
+++ b/webapp/template/one_event.html
@@ -14,10 +14,10 @@
 			<td>{{ scan.uid }}</td>
 			<td>{{ scan.date }}</td>
 			<td align="center"><a href="{% url 'pages:update_event' event.pk %}"
-				class="btn btn-outline-secondary btn-sm">Update</a></td>
-		</tr>
-		{% endfor %}
-	</table>
+				class="btn btn-outline-secondary btn-sm">Update event</a></td>
+			</tr>
+			{% endfor %}
+		</table>
 	<table class="scan_table">
 		<tr>
 			<th>Mode</th>
@@ -30,6 +30,8 @@
 		</tr>
 		{% endfor %}
 	</table>
+	<td align="center"><a href="{% url 'pages:update_mode' event.pk %}"
+		class="btn btn-outline-secondary btn-sm">Update Mode</a></td>
 	<div class="blue_cube"> .</div>
 </div>
 {% endblock %}
