--- a/webapp/template/one_event.html
+++ b/webapp/template/one_event.html
@@ -5,24 +5,16 @@
 	<h1 id="one_event_title">{{event.name}}</h1>
 	<table class="scan_table">
 		<tr>
-			<th>Name</th>
-			<th>Date</th>
-			<th>End</th>
-			<th>Type</th>
-			<th>Amount</th>
-			<th></th>
+			<th>Student name</th>
+			<th>Time of scan</th>
 		</tr>
+		{% for scan in scans %}
 		<tr>
-			<td>{{ event.name }}</td>
-			<td>{{ event.date }}</td>
-			<td>{{ event.end }}</td>
-			<td></td>
-			<td></td>
-			<td align="center"><a href="{% url 'pages:update_event' event.pk %}"
-				class="btn btn-outline-secondary btn-sm">Update event</a></td>
-			</tr>
-			{% endfor %}
-		</table>
+			<td>{{ scan.uid }}</td>
+			<td>{{ scan.date }}</td>
+		</tr>
+		{% endfor %}
+	</table>
 	<table class="scan_table">
 		<tr>
 			<th>Mode</th>
@@ -35,6 +27,8 @@
 		</tr>
 		{% endfor %}
 	</table>
+	<td align="center"><a href="{% url 'pages:update_event' event.pk %}"
+		class="btn btn-outline-secondary btn-sm">Update event</a></td>
 	<td align="center"><a href="{% url 'pages:update_mode' event.pk %}"
 		class="btn btn-outline-secondary btn-sm">Update Mode</a></td>
 	<div class="blue_cube"> .</div>
