Update event works perfectly and ready for productions.

--- a/webapp/template/update_event.html
+++ b/webapp/template/update_event.html
@@ -26,8 +26,8 @@
 		<br/>
 		{% endfor %}
 
-		{% if error == "Already exist" %}
-			The type already exist!
+		{% if error %}
+			Error : {{error}}
 			<br/>
 		{% endif %}
 		<button name="action" value="submit">Submit</button>
