--- a/webapp/template/scans.html
+++ b/webapp/template/scans.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<div>
+<div id="scan_page">
 	<h1>LAST SCAN</h1>
 	<table class="last_scan">
 		<tr>
@@ -10,22 +10,22 @@
 			<th>Time of scan</th>
 		</tr>
 		<tr>
+			<td>{{ current_scan.uid }}</td>
+			<td>{{ current_scan.date }}</td>
+		</tr>
+	</table>
+	<table class="scan_page_table">
+		<tr>
+			<th>UID</th>
+			<th>Date</th>
+		</tr>
+		{% for scan in scans %}
+		<tr>
 			<td>{{ scan.uid }}</td>
 			<td>{{ scan.date }}</td>
 		</tr>
+		{% endfor %}
 	</table>
+	<div class="light_cube"> .</div>
 </div>
-<table class="scan_table" style="border:solid; ">
-	<tr>
-		<th>UID</th>
-		<th>Date</th>
-	</tr>
-	{% for scan in scans %}
-	<tr>
-		<td>{{ scan.uid }}</td>
-		<td>{{ scan.date }}</td>
-	</tr>
-	{% endfor %}
-</table>
-
 {% endblock %}
