--- a/webapp/template/scans.html
+++ b/webapp/template/scans.html
@@ -14,6 +14,7 @@
 			<td>{{ current_scan.date }}</td>
 		</tr>
 	</table>
+	<h1>ALL SCANS</h1>
 	<table class="scan_page_table">
 		<tr>
 			<th>UID</th>
@@ -26,6 +27,6 @@
 		</tr>
 		{% endfor %}
 	</table>
-	<div class="light_cube"> .</div>
+	
 </div>
 {% endblock %}
