Add event redirect to update event to change modes

--- a/webapp/template/add_event.html
+++ b/webapp/template/add_event.html
@@ -5,19 +5,14 @@
 	<br/><br/><br/>
 	<h1>Add an event to database...</h1>
 	<br/><br/><br/>
-	{% if submitted %}
-		The event was added!
-
-	{% else %}
 
 		<form action="" method=POST>
 			{% csrf_token %}
 			
 			{{ form.as_p}}
 			
-			<input type="submit" value="Add" class="btn btn-success">
+			<button name="submit" value="first">Add modes</button>
 		</form>
 
-	{% endif %}
 	</center>
 {% endblock %}
