--- a/webapp/template/scans.html
+++ b/webapp/template/scans.html
@@ -16,10 +16,8 @@
 			<td>{{ current_scan.uid }}</td>
 			<td>{{ current_scan.login }}</td>
 			<td>{{ current_scan.date }}</td>
-			<td align="center"><a href="{% url 'pages:update_studentbadge' %}"
+			<td align="center"><a href="{% url 'badges:update_studentbadge' scan.pk %}"
 				class="btn btn-outline-secondary btn-sm">Update</a></td>
-			<td align="center"><a href="{% url 'pages:delete_studentbadge' %}"
-				class="btn btn-outline-danger btn-sm">Delete</a></td>
 		</tr>
 	</table>
 	<h1>ALL SCANS</h1>
