--- a/webapp/template/scans.html
+++ b/webapp/template/scans.html
@@ -10,28 +10,30 @@
 			<th>Student name</th>
 			<th>Time of scan</th>
 			<th></th>
-			<th></th>
 		</tr>
 		<tr>
 			<td>{{ current_scan.uid }}</td>
 			<td>{{ current_scan.login }}</td>
 			<td>{{ current_scan.date }}</td>
-			<td align="center"><a href="{% url 'badges:update_studentbadge' scan.pk %}"
+			<td align="center"><a href="{% url 'badges:update_studentbadge' current_scan.pk %}"
 				class="btn btn-outline-secondary btn-sm">Update</a></td>
-		</tr>
-	</table>
-	<h1>ALL SCANS</h1>
-	<table class="scan_page_table">
-		<tr>
-			<th>UID</th>
-			<th>Login</th>
-			<th>Date</th>
+			</tr>
+		</table>
+		<h1>ALL SCANS</h1>
+		<table class="scan_page_table">
+			<tr>
+				<th>UID</th>
+				<th>Login</th>
+				<th>Date</th>
+				<th></th>
 		</tr>
 		{% for scan in scans reversed %}
 		<tr>
 			<td>{{ scan.uid }}</td>
 			<td>{{ scan.login }}</td>
 			<td>{{ scan.date }}</td>
+			<td align="center"><a href="{% url 'badges:update_studentbadge' scan.pk %}"
+				class="btn btn-outline-secondary btn-sm">Update</a></td>
 		</tr>
 		{% endfor %}
 	</table>
