--- a/webapp/template/one_event.html
+++ b/webapp/template/one_event.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div id="one_event_page">
-	<h1 id="one_event_title">{{event.name}}</h1>
+	<h1>{{event.name}}</h1>
 	<table class="scan_table">
 		<tr>
 			<th>Badge UID</th>
@@ -17,6 +17,7 @@
 		</tr>
 		{% endfor %}
 	</table>
+	<h2>MODES</h2>
 	<table class="scan_table">
 		<tr>
 			<th>Mode</th>
