--- a/webapp/template/one_badge.html
+++ b/webapp/template/one_badge.html
@@ -46,9 +46,10 @@
 			<td>{{ student_bg.caution_paid }}</td>
 			<td>{{ student_bg.caution_returned }}</td>
 			<td>{{ student_bg.lost }}</td>
-			<td align="center"><a href="{% url 'badges:update_student' student_bg.pk %}"
+			<td align="center"><a href="{% url 'badges:update_badge' student.pk %}"
 				class="btn btn-outline-secondary btn-sm">Update</a></td>
 		</tr>
 	</table>
 </div>
 {% endblock %}
+
