--- a/webapp/template/search_general.html
+++ b/webapp/template/search_general.html
@@ -7,13 +7,14 @@
 		{% if searched %}
 		<h1>You searched for {{ searched }}</h1>
 		<br/>
+		<br/>
 		{% for event in events %}
 			<a href="{% url 'pages:one_event' event.pk%}"><u>{{ event.name }}</u> - {{ event.date }} </a><br/>
 
 		{% endfor %}
 
-		{% for student in students %}
-			<a href="{% url 'badges:one_student' student.pk%}"><u>{{ student.intra_id }}</u></a> - <a href="https://profile.intra.42.fr/users/{{ student.login }}"><u>{{ student.login }}</u></a> - {{ student.displayname }}<br/>
+		{% for student_bg in student_bgs %}
+			<a href="{% url 'badges:one_student' student_bg.pk%}"><u>{{ student_bg.student.intra_id }}</u></a> - <a href="https://profile.intra.42.fr/users/{{ student.login }}"><u>{{ student_bg.student.login }}</u></a> - {{ student_bg.student.displayname }}<br/>
 
 		{% endfor %}
 		
